--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@
 title: Kevin's Tech Spot
 email: kevin.arakelian.425@my.csun.edu
 description: >- # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  Kevin's Tech Spot will be uploading weekly blogs on various
+  I.T. and technical related topics. Some examples include Kubernetes, Python,
+  Goland, IP Tables, and etc. Stay tuned for new posts!
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: jekyllrb
-github_username:  jekyll
+github_username:  karakelian
 
 # Build settings
 theme: minima
